# rag-system-deployment

./: .env.template  .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
api/: main.py
data/: evaluation_set.json
docs/: TECHNICAL_REPORT.md
scripts/: evaluate_rag.py  fetch_data.py  process_data.py  rag_system.py  rebuild_index.py
src/: evaluate_rag.py  fetch_data.py  process_data.py  rag_system.py  rebuild_index.py
tests/: api_test.py  test_data.py  test_indexing.py  test_rag.py
