[tool.poetry]
package-mode = false

[project]
name = "puls-events-rag-poc"
version = "0.1.0"
description = "POC for a cultural events RAG chatbot."
authors = [
    {name = "Asma Aliouche"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "langchain (>=1.2.12,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-mistralai (>=1.1.2,<2.0.0)",
    "mistralai (>=2.0.2,<3.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-huggingface (>=1.2.2,<2.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "ruff (>=0.15.17,<0.16.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "datasets (>=4.8.5,<5.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.17,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
